# smart_led_strip

./: README.md  client.py
client/: client.ino  color.h  helper.h  helper.ino  message.h
kitchen_led_strip/: kitchen_led_strip.ino
server/: CMakeLists.txt  Cargo.toml  Makefile.toml  build.rs
server/.cargo/: config.toml
server/arp/: Cargo.toml
server/arp/examples/: generate-headers.rs
server/arp/src/: lib.rs
server/assets/: systemd.service
server/assets/etc-configs/: config.yaml.example
server/assets/package-files/: smart_led.service
server/cmake/: arp.cmake  liboping.cmake  libp2c.cmake
server/include/: arduino.h  color.h  day_part.h  helper.h  message.h
server/src/: arduino.cpp  arp_pinger.rs  color.cpp  config.rs  day_part.cpp  main.cpp  main.rs  relative_time.rs
server/src/arduino/: color.rs  mod.rs
server/src/arduino/i2c/: mod.rs  request.rs  response.rs
